# imgui-glfw-cmake

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: AppGUI.h  app.h  debug.cpp  debug.h  main.cpp  style.h  utils.h
src/Theme/: DefaultStyle.h
src/Tools/: Console.h  Log.h
src/Window/: LoginWindow.h  MainWindow.cpp  MainWindow.h  Window.h  WindowManager.cpp  WindowManager.h
src/debug/: console.cpp  console.h  log.cpp  log.h
src/window/: console.cpp  console.h  log.cpp  log.h  login_window.cpp  login_window.h  main_window.cpp
